force-app/main/default/objects/newActor__c/newActor__c.object-meta.xml
<CustomObject>
    <label>newActor</label>
    <nameField>
        <label>newActor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>newActors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>