force-app/main/default/objects/newActor__c/fields/biography__c.field-meta.xml
<CustomField>
    <fullName>biography__c</fullName>
    <label>biography</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>