force-app/main/default/objects/newActor__c/fields/birthday__c.field-meta.xml
<CustomField>
    <fullName>birthday__c</fullName>
    <label>birthday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>