force-app/main/default/objects/newActor__c/fields/deathday__c.field-meta.xml
<CustomField>
    <fullName>deathday__c</fullName>
    <label>deathday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>