force-app/main/default/objects/newActor__c/fields/newFilm__c.field-meta.xml
<CustomField>
    <fullName>newFilm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>newFilm</label>
    <referenceTo>newFilm__c</referenceTo>
    <relationshipLabel>newActors</relationshipLabel>
    <relationshipName>newActors</relationshipName>
    <type>Lookup</type>
</CustomField>