force-app/main/default/objects/newActor__c/fields/place_of_birth__c.field-meta.xml
<CustomField>
    <fullName>place_of_birth__c</fullName>
    <label>place_of_birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>