force-app/main/default/objects/newActor__c/fields/popularity__c.field-meta.xml
<CustomField>
    <fullName>popularity__c</fullName>
    <label>popularity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>