force-app/main/default/objects/newActor__c/fields/profile_path__c.field-meta.xml
<CustomField>
    <fullName>profile_path__c</fullName>
    <label>profile_path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>